--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,7 @@
     <link rel='manifest' href='manifest.json'>
     <link rel='icon' type='image/png' href='favicon.png'>
 
-
+    <link href="https://fonts.googleapis.com/css?family=Lato|Playfair+Display&display=swap" rel="stylesheet">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110018468-14"></script>
     <script>
