--- a/src/template.html
+++ b/src/template.html
@@ -1,17 +1,17 @@
 <!doctype html>
-<html>
+<html lang="nl">
 
 <head>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width,initial-scale=1.0'>
-    <meta name='theme-color' content='#333333'>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="theme-color" content="#333333">
 
     %sapper.base%
 
-    <link rel='stylesheet' href='global.css'>
-    <link rel='manifest' href='manifest.json'>
-    <link rel='icon' type='image/png' href='favicon.png'>
-
+    <link rel="stylesheet" href="global.css">
+    <link rel="manifest" href="manifest.json">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <title>Ontstoppingsdienst Sobry</title>
     <link href="https://fonts.googleapis.com/css?family=Lato|Playfair+Display&display=swap" rel="stylesheet">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110018468-14"></script>
@@ -23,9 +23,9 @@
             function gtag() {
                 dataLayer.push(arguments);
             }
-            gtag('js', new Date());
+            gtag("js", new Date());
 
-            gtag('config', 'UA-110018468-14');
+            gtag("config", "UA-110018468-14");
         }
     </script>
 
@@ -42,7 +42,7 @@
 <body>
     <!-- The application will be rendered inside this element,
 	     because `src/client.js` references it -->
-    <div id='sapper'>%sapper.html%</div>
+    <div id="sapper">%sapper.html%</div>
 
     <!-- Sapper creates a <script> tag containing `src/client.js`
 	     and anything else it needs to hydrate the app and
