--- a/src/template.html
+++ b/src/template.html
@@ -16,6 +16,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110018468-14"></script>
 
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml">
     <!-- Google Tag Manager -->
     <script>
         (function (w, d, s, l, i) {
