--- a/src/template.html
+++ b/src/template.html
@@ -16,6 +16,13 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110018468-14"></script>
 
+    <meta property="og:title" content="Ontstoppingsdienst Sobry" />
+    <meta property="og:url" content="https://ontstoppingsdienst-sobry.be/" />
+    <meta property="og:description"
+        content="Voor elke soort verstopping heb ik de juiste materialen en de nodige vakkennis.">
+    <meta property="og:image" content="https://ontstoppingsdienst-sobry.be/logo.png">
+
+
     <link rel="sitemap" type="application/xml" href="/sitemap.xml">
     <!-- Google Tag Manager -->
     <script>
