--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="global.css">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/png" href="favicon.png">
-    <title>Ontstoppingsdienst Sobry</title>
+    <title>Ontstoppingsdienst Sobry | 0467/00.50.50</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Playfair+Display&display=swap" rel="stylesheet">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110018468-14"></script>
