add meta stuff + logo

--- a/src/template.html
+++ b/src/template.html
@@ -21,11 +21,14 @@
     <meta name="keywords"
         content="Ontstoppingsdienst Sobry, Ontstoppingen, Advies aankoop woning, Herstellingen, Cameradetectie, Geurdetectie, Ontkalken">
 
+    <meta property="og:site_name" content="Ontstoppingsdienst Sobry">
+    <meta property="og:type" content="website" />
+
     <meta property="og:title" content="Ontstoppingsdienst Sobry" />
     <meta property="og:url" content="https://ontstoppingsdienst-sobry.be/" />
     <meta property="og:description"
         content="Voor elke soort verstopping heb ik de juiste materialen en de nodige vakkennis.">
-    <meta property="og:image" content="https://ontstoppingsdienst-sobry.be/logo.png">
+    <meta property="og:image" content="https://ontstoppingsdienst-sobry.be/sobry-og-logo.png">
 
 
     <link rel="sitemap" type="application/xml" href="/sitemap.xml">
