--- a/src/template.html
+++ b/src/template.html
@@ -28,8 +28,9 @@
     <meta property="og:url" content="https://ontstoppingsdienst-sobry.be/" />
     <meta property="og:description"
         content="Voor elke soort verstopping heb ik de juiste materialen en de nodige vakkennis." />
-    <meta property="og:image" content="https://ontstoppingsdienst-sobry.be/sobry-og-logo.png" />
-
+    <meta property="og:image" itemprop="image" content="https://ontstoppingsdienst-sobry.be/sobry-og-logo.png" />
+    <meta property="og:image:width" content="256">
+    <meta property="og:image:height" content="256">
     <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
     <!-- Sapper generates a <style> tag containing critical CSS
