--- a/src/template.html
+++ b/src/template.html
@@ -17,9 +17,9 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110018468-14"></script>
 
     <meta name="description"
-        content="Ontstoppingsdienst Sobry: Voor elke soort verstopping heb ik de juiste materialen en de nodige vakkennis." />
+        content="Vakkundig en Proper opgelost! 24/7 bereikbaar. Jarenlange Ervaring. Totaaloplossingen. Transparante prijs. Services: Ontstoppingsdienst, Camera inspectie, geurdetectie." />
     <meta name="keywords"
-        content="Ontstoppingsdienst Sobry, Ontstoppingen, Advies aankoop woning, Herstellingen, Cameradetectie, Geurdetectie, Ontkalken" />
+        content="Vakkundig en Proper opgelost! 24/7 bereikbaar. Jarenlange Ervaring. Totaaloplossingen. Transparante prijs. Services: Ontstoppingsdienst, Camera inspectie, geurdetectie." />
 
     <meta property="og:site_name" content="Ontstoppingsdienst Sobry" />
     <meta property="og:type" content="website" />
@@ -27,7 +27,7 @@
     <meta property="og:title" content="Ontstoppingsdienst Sobry" />
     <meta property="og:url" content="https://ontstoppingsdienst-sobry.be/" />
     <meta property="og:description"
-        content="Voor elke soort verstopping heb ik de juiste materialen en de nodige vakkennis." />
+        content="Vakkundig en Proper opgelost! 24/7 bereikbaar. Jarenlange Ervaring. Totaaloplossingen. Transparante prijs. Services: Ontstoppingsdienst, Camera inspectie, geurdetectie." />
     <meta property="og:image" itemprop="image" content="https://ontstoppingsdienst-sobry.be/sobry-og-logo.png" />
     <meta property="og:image:width" content="256">
     <meta property="og:image:height" content="256">
