--- a/src/template.html
+++ b/src/template.html
@@ -5,11 +5,50 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="theme-color" content="#333333" />
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Plumber",
+            "name": "Ontstoppingsdienst Sobry",
+            "image": "https://ontstoppingsdienst-sobry.be/sobry-og-logo.png",
+            "@id": "https://ontstoppingsdienst-sobry.be",
+            "url": "https://ontstoppingsdienst-sobry.be",
+            "telephone": "0032467005050",
+            "priceRange": "80-160€",
+            "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "hillarestraat 175",
+                "addressLocality": "Lokeren",
+                "postalCode": "9160",
+                "addressCountry": "BE"
+            },
+            "openingHoursSpecification": {
+                "@type": "OpeningHoursSpecification",
+                "dayOfWeek": [
+                    "Monday",
+                    "Tuesday",
+                    "Wednesday",
+                    "Thursday",
+                    "Friday",
+                    "Saturday",
+                    "Sunday"
+                ],
+                "opens": "00:00",
+                "closes": "23:59"
+            },
+            "sameAs": [
+                "https://www.youtube.com/channel/UCSBVLFeVuLjvPQPPuQl9rWw",
+                "https://www.linkedin.com/in/ontstoppingsdienst-sobry",
+                "https://www.facebook.com/ontstoppingsdienstsobry/"
+            ]
+        }
+    </script>
 
     %sapper.base%
 
     <link rel="stylesheet" href="global.css" />
     <link rel="manifest" href="manifest.json" />
+    <link rel="canonical" href="https://ontstoppingsdienst-sobry.be" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <title>Ontstoppingsdienst Sobry | 0467/00.50.50</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Playfair+Display&display=swap" rel="stylesheet" />
@@ -17,17 +56,17 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110018468-14"></script>
 
     <meta name="description"
-        content="Vakkundig en Proper opgelost! 24/7 bereikbaar. Jarenlange Ervaring. Totaaloplossingen. Transparante prijs. Services: Ontstoppingsdienst, Camera inspectie, geurdetectie." />
+        content="Ontstoppingsdienst Sobry. Vakkundig en Proper opgelost! 24/7 bereikbaar. Jarenlange Ervaring. Totaaloplossingen. Transparante prijs." />
     <meta name="keywords"
         content="Vakkundig en Proper opgelost! 24/7 bereikbaar. Jarenlange Ervaring. Totaaloplossingen. Transparante prijs. Services: Ontstoppingsdienst, Camera inspectie, geurdetectie." />
 
     <meta property="og:site_name" content="Ontstoppingsdienst Sobry" />
     <meta property="og:type" content="website" />
 
-    <meta property="og:title" content="Ontstoppingsdienst Sobry" />
+    <meta property="og:title" content="Ontstoppingsdienst Sobry | 0467/00.50.50" />
     <meta property="og:url" content="https://ontstoppingsdienst-sobry.be/" />
     <meta property="og:description"
-        content="Vakkundig en Proper opgelost! 24/7 bereikbaar. Jarenlange Ervaring. Totaaloplossingen. Transparante prijs. Services: Ontstoppingsdienst, Camera inspectie, geurdetectie." />
+        content="Ontstoppingsdienst Sobry. Vakkundig en Proper opgelost! 24/7 bereikbaar. Jarenlange Ervaring. Totaaloplossingen. Transparante prijs." />
     <meta property="og:image" itemprop="image" content="https://ontstoppingsdienst-sobry.be/sobry-og-logo.png" />
     <meta property="og:image:width" content="256">
     <meta property="og:image:height" content="256">
