lazy load images

--- a/src/template.html
+++ b/src/template.html
@@ -134,6 +134,8 @@
             }
         }
     </script>
+      <script src="lazysizes.min.js" async></script>
+      <!-- Images End -->
 </body>
 
 </html>
